--- a/DzRevitTools/App.config
+++ b/DzRevitTools/App.config
@@ -16,6 +16,9 @@
             <setting name="CounterRunTemplate" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="CounterRunMyFirstCommand" serializeAs="String">
+                <value>0</value>
+            </setting>
         </DzRevitTools.Properties.Settings>
     </userSettings>
 </configuration>
